--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
         <p class="products">Coming Soon...</p>
         <div class="gallery">
             <div>
-                <img src="https://source.unsplash.com/200x200/?indoor-plants" alt="Indoor and Outdoor Plants">
+                <img src="indoor_outdoor_plants.jpg" alt="Indoor and Outdoor Plants">
                 <h3>Indoor and Outdoor Plants</h3>
             </div>
             <div>
-                <img src="https://source.unsplash.com/200x200/?flowering-plants" alt="Flowering Plants">
+                <img src="flowering_plants.jpg" alt="Flowering Plants">
                 <h3>Flowering Plants</h3>
             </div>
             <div>
-                <img src="https://source.unsplash.com/200x200/?garden-pots" alt="Pots">
+                <img src="pots.jpg" alt="Pots">
                 <h3>Pots</h3>
             </div>
             <div>
-                <img src="https://source.unsplash.com/200x200/?garden-accessories" alt="Garden Accessories and Decorative Items">
+                <img src="garden_accessories_decor" alt="Garden Accessories and Decorative Items">
                 <h3>Garden Accessories and Decorative Items</h3>
             </div>
         </div>
