--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: url('background.jpg') no-repeat center center/cover;
+            background: url('background.png') no-repeat center center/cover;
             background-attachment: fixed;
             text-align: center;
             color: #2e7d32;
@@ -106,7 +106,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Mona Leaf & Decor Logo">
+        <img src="logo.jpg" alt="Mona Leaf & Decor Logo">
         <span class="company-name">Mona Leaf & Decor</span>
     </header>
     
