--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: url('https://www.example.com/sample-image.jpg') no-repeat center center/cover;
+            background: url('https://www.w3schools.com/w3images/lights.jpg') no-repeat center center/cover;
             background-attachment: fixed;
             text-align: center;
             color: #2e7d32;
