--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: url('DALL·E 2025-02-15 21.44.00 - A serene and lush garden with vibrant green plants, decorative pots, and a cozy outdoor setting. The background is inviting and peaceful, emphasizing .jpg') no-repeat center center/cover;
-            background-attachment: fixed;
             text-align: center;
             color: #2e7d32;
         }
@@ -60,6 +58,7 @@
             padding: 20px;
             text-align: center;
             width: 100%;
+            background: url('hero-background.jpg') no-repeat center center/cover;
         }
         .gallery {
             display: flex;
@@ -106,7 +105,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.jpg" alt="Mona Leaf & Decor Logo">
+        <img src="logo.png" alt="Mona Leaf & Decor Logo">
         <span class="company-name">Mona Leaf & Decor</span>
     </header>
     
