--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             font-size: 22px;
             color: #1b5e20;
             font-weight: bold;
+            border: 2px solid white;
+            display: inline-block;
+            padding: 10px;
         }
         footer {
             background-color: #2e7d32;
@@ -82,6 +85,9 @@
             margin-top: 10px;
             font-size: 18px;
             color: #1b5e20;
+            border: 2px solid white;
+            display: inline-block;
+            padding: 5px;
         }
         .contact {
             margin-top: 10px;
@@ -115,7 +121,7 @@
     </div>
     
     <section>
-        <h2>Our Products</h2>
+        <h2 class="products">Our Products</h2>
         <p class="products">Coming Soon...</p>
         <div class="gallery">
             <div>
