--- a/index.html
+++ b/index.html
@@ -115,24 +115,24 @@
     </div>
     
     <section>
-        <h2 class="products" style="border: 2px solid white; padding: 10px; display: inline-block;">Our Products</h2>
-        <p class="products" style="border: 2px solid white; padding: 10px; display: inline-block;">Coming Soon...</p>
+        <h2>Our Products</h2>
+        <p class="products">Coming Soon...</p>
         <div class="gallery">
             <div>
                 <img src="indoor-plants.png" alt="Indoor and Outdoor Plants">
-                <h3 style="border: 2px solid white; padding: 5px; display: inline-block;">Indoor and Outdoor Plants</h3>
+                <h3>Indoor and Outdoor Plants</h3>
             </div>
             <div>
                 <img src="flowering-plants.png" alt="Flowering Plants">
-                <h3 style="border: 2px solid white; padding: 5px; display: inline-block;">Flowering Plants</h3>
+                <h3>Flowering Plants</h3>
             </div>
             <div>
                 <img src="pots.png" alt="Pots">
-                <h3 style="border: 2px solid white; padding: 5px; display: inline-block;">Pots</h3>
+                <h3>Pots</h3>
             </div>
             <div>
                 <img src="garden-accessories-decorative.png" alt="Garden Accessories and Decorative Items">
-                <h3 style="border: 2px solid white; padding: 5px; display: inline-block;">Garden Accessories and Decorative Items</h3>
+                <h3>Garden Accessories and Decorative Items</h3>
             </div>
         </div>
     </section>
