--- a/index.html
+++ b/index.html
@@ -114,28 +114,41 @@
         <h1>Bringing Nature to Your Home</h1>
     </div>
     
-    <section>
-        <h2>Our Products</h2>
-        <p class="products">Coming Soon...</p>
-        <div class="gallery">
-            <div>
-                <img src="indoor-plants.png" alt="Indoor and Outdoor Plants">
-                <h3>Indoor and Outdoor Plants</h3>
-            </div>
-            <div>
-                <img src="flowering-plants.png" alt="Flowering Plants">
-                <h3>Flowering Plants</h3>
-            </div>
-            <div>
-                <img src="pots.png" alt="Pots">
-                <h3>Pots</h3>
-            </div>
-            <div>
-                <img src="garden-accessories-decorative.png" alt="Garden Accessories and Decorative Items">
-                <h3>Garden Accessories and Decorative Items</h3>
-            </div>
+   <section>
+    <h2 style="text-shadow: 2px 2px 4px white, -2px -2px 4px white, 2px -2px 4px white, -2px 2px 4px white;">
+        Our Products
+    </h2>
+    <p class="products" style="text-shadow: 2px 2px 4px white, -2px -2px 4px white, 2px -2px 4px white, -2px 2px 4px white;">
+        Coming Soon...
+    </p>
+    <div class="gallery">
+        <div>
+            <img src="indoor-plants.png" alt="Indoor and Outdoor Plants">
+            <h3 style="text-shadow: 2px 2px 4px white, -2px -2px 4px white, 2px -2px 4px white, -2px 2px 4px white;">
+                Indoor and Outdoor Plants
+            </h3>
         </div>
-    </section>
+        <div>
+            <img src="flowering-plants.png" alt="Flowering Plants">
+            <h3 style="text-shadow: 2px 2px 4px white, -2px -2px 4px white, 2px -2px 4px white, -2px 2px 4px white;">
+                Flowering Plants
+            </h3>
+        </div>
+        <div>
+            <img src="pots.png" alt="Pots">
+            <h3 style="text-shadow: 2px 2px 4px white, -2px -2px 4px white, 2px -2px 4px white, -2px 2px 4px white;">
+                Pots
+            </h3>
+        </div>
+        <div>
+            <img src="garden-accessories-decorative.png" alt="Garden Accessories and Decorative Items">
+            <h3 style="text-shadow: 2px 2px 4px white, -2px -2px 4px white, 2px -2px 4px white, -2px 2px 4px white;">
+                Garden Accessories and Decorative Items
+            </h3>
+        </div>
+    </div>
+</section>
+
     
     <footer>
         We are live in Pune<br>
